2/nginx-init-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-init-svc
  labels:
    app: nginx-init
spec:
  selector:
    app: nginx-init
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  type: ClusterIP
