2/service-https.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-service
spec:
  type: NodePort
  selector:
    app: nginx-https
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
